--- a/puertasenvidrio/src/components/Home/Text/TextOne.module.css
+++ b/puertasenvidrio/src/components/Home/Text/TextOne.module.css
@@ -1,5 +1,5 @@
 .TextOne h4{
-    margin: 2rem;
+    margin-top: 10rem;
    font-size: 2rem;
    text-align: justify;
    color: rgb(197, 251, 255);
