--- a/puertasenvidrio/src/components/Admin/Admin.module.css
+++ b/puertasenvidrio/src/components/Admin/Admin.module.css
@@ -1,7 +1,7 @@
 .div{
-    background-color: chocolate;
-    height: 1000px
-
+  background-color: rgba(35, 69, 133, 0.8);
+  display: flex;
+  flex-direction: column;
 }
 
 .button1{
@@ -14,12 +14,12 @@
       text-align: center;
       font-size: 15px;
       padding: 10px;
-      width: 150px;
+ 
       transition: all 0.5s;
       cursor: pointer;
       margin: 5px;
-    position: relative;
-    top: 50px; left: -300px;
+  
+  
 }
 
 .button2{
@@ -33,12 +33,12 @@
     text-align: center;
     font-size: 15px;
     padding: 10px;
-    width: 150px;
+
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
-    position: relative;
-    top: 0px; left: 80px;  
+  
+ 
 
 }
 
@@ -46,7 +46,7 @@
 
     border: 100px;
     background-color: chartreuse;
-    position: relative;
+   
     display: inline-block;
     border-radius: 4px;
     background-color: #2c0d04;
@@ -55,18 +55,15 @@
     text-align: center;
     font-size: 15px;
     padding: 10px;
-    width: 150px;
+
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
 
-    top: -1px; left: 200px;  
+  
 }
 
-.cs{
-    position: relative;
-    top: 200px; left: -200px; 
-}
+
 
 
 
