--- a/puertasenvidrio/src/components/Card/Card.module.css
+++ b/puertasenvidrio/src/components/Card/Card.module.css
@@ -1,28 +1,41 @@
+
 .card{
-    border: 1px solid black;
-    width: fit-content;
-    height:min-content;
-    border-radius:10px;
-      flex-wrap:wrap;
-      background-color: rgb(0, 0, 0);
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 2fr));
+ gap: 5px;
+background-color: rgba(197, 197, 197, 0.8);
+ margin: 1rem;
+}
+.parteOne{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  
+}
+.parteOne h1{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto;
+  font-size: 1.5rem;
+}
+
+.parteTwo{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.parteTwo img{
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+width: 100%;
+height: 100%;
 
 }
 
-
-
-
-
-.imgCss{
-    display: block;
-    width: 300px;
-    height: 200px;
-  }
-
-  .LetraCards{
-    color:rgb(209, 17, 17);
-    background-color: rgb(5, 5, 5);
-    border-radius: 15px
-
-   }
 
   
